[tool.poetry]
name = "fastapi-tortoise"
version = "0.1.0"
description = ""
authors = ["Eric Souza <ericsouza0801@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
tortoise-orm = "^0.17.5"
asyncpg = "^0.23.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.26.0"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
